--- a/win/dotfiles/.gitconfig
+++ b/win/dotfiles/.gitconfig
@@ -32,3 +32,13 @@
     untracked = cyan
   [core]
     whitespace=fix,-indent-with-non-tab,trailing-space,cr-at-eol
+[diff]
+	tool = meld
+[merge]
+	tool = meld
+[difftool "meld"]
+    prompt = false
+	path = C:\\Program Files (x86)\\Meld\\Meld.exe
+[mergetool "meld"]
+    prompt = false
+	path = C:\\Program Files (x86)\\Meld\\Meld.exe
