--- a/win/dotfiles/.gitconfig
+++ b/win/dotfiles/.gitconfig
@@ -33,6 +33,7 @@
     untracked = cyan
   [core]
     whitespace=fix,-indent-with-non-tab,trailing-space,cr-at-eol
+	  editor = code --wait
 [diff]
 	tool = meld
 [merge]
