--- a/win/dotfiles/.gitconfig
+++ b/win/dotfiles/.gitconfig
@@ -30,7 +30,6 @@
   amend   = commit --amend
   fame = !python -m gitfame
 
-
 [init]
 	defaultBranch = main
 
@@ -55,8 +54,8 @@
   untracked = cyan
 
 [core]
-  whitespace=fix,-indent-with-non-tab,trailing-space,cr-at-eol
- editor = code --wait # https://stackoverflow.com/questions/2596805/how-do-i-make-git-use-the-editor-of-my-choice-for-commits?utm_source=pocket_mylist
+  # whitespace=fix,-indent-with-non-tab,trailing-space,cr-at-eol
+  editor = code --wait # https://stackoverflow.com/questions/2596805/how-do-i-make-git-use-the-editor-of-my-choice-for-commits?utm_source=pocket_mylist
 
 [diff]
 	tool = meld
