--- a/win/dotfiles/.gitconfig
+++ b/win/dotfiles/.gitconfig
@@ -65,7 +65,8 @@
 
 [difftool "meld"]
   prompt = false
-	path = C:\\Program Files (x86)\\Meld\\Meld.exe
+	#path = C:\\Program Files (x86)\\Meld\\Meld.exe
+  external = 'C:\\Program Files (x86)\\Meld\\Meld.exe "$LOCAL" "$REMOTE"'
 
 [merge]
 	tool = meld
